# django-drf-ecommerce

./: .gitignore  pyproject.toml
drfecommerce/drfecommerce/product/: views.py
drfecommerce/drfecommerce/settings/: local.py
drfecommerce/drfecommerce/tests/product/: test_endpoints.py
